--- a/src/assets/styles/base/_sidebar.scss
+++ b/src/assets/styles/base/_sidebar.scss
@@ -67,8 +67,8 @@ a {
       margin-right: 10px;
     }
     .brand-name {
-      color: #EA4C89;
-      font-family: "SF UI Text";
+      color: rgb(83, 145, 226);
+      font-family: 'Open Sans', sans-serif;
       font-size: 16px;
       font-weight: 600;
       line-height: 19px;
