--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -131,8 +131,8 @@ $line-height-lg:              54px !default;
 
 $sidebar-width:               280px;
 $sidebar-color: #fff;
-$sidebar-bg: #6D71EF;
-$sidebar-sub-menu-bg: lighten($sidebar-bg, 4%);
+$sidebar-bg: rgb(81, 165, 243);
+$sidebar-sub-menu-bg: lighten($sidebar-bg, 6%);
 
 $border-radius-top:        10px 10px 0 0 !default;
 $border-radius-bottom:     0 0 10px 10px !default;
