--- a/src/widgets/LunchFeed/LunchFeed.scss
+++ b/src/widgets/LunchFeed/LunchFeed.scss
@@ -1,8 +1,8 @@
-.LaunchFeed{
+.LunchFeed{
     box-sizing: border-box;
 }
 
-.LaunchFeed__menu{
+.LunchFeed__menu{
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
     background-color: #eeeeee;
