LunchFeed widget skeleton done

--- a/src/widgets/LunchFeed/LunchFeed.scss
+++ b/src/widgets/LunchFeed/LunchFeed.scss
@@ -6,11 +6,31 @@
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
     background-color: #eeeeee;
+    margin-bottom: 20px;
 
     .menu-title{
-        background-color: #a9a9a9;
-        padding: 2px 10px;
+        margin: 0;
+    }
+
+    .menu-description {
+        padding-top: 15px;
+        padding-bottom: 15px;
     }
     
+    &:last-of-type{
+      margin-bottom: 0;  
+    }
 }
 
+.LunchFeed__header{
+    background-color: #a9a9a9;
+    padding: 8px;
+}
+
+.LunchFeed__form{
+    margin-bottom: 15px;
+
+    .control-label{
+        margin-right: 5px;
+    }
+}
