--- a/src/widgets/LunchFeed/LunchFeed.scss
+++ b/src/widgets/LunchFeed/LunchFeed.scss
@@ -5,7 +5,7 @@
 .LunchFeed__menu{
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-    background-color: #eeeeee;
+    background-color: lighten(rgb(81, 165, 243),6%);
     margin-bottom: 20px;
 
     .menu-title{
@@ -23,9 +23,28 @@
 }
 
 .LunchFeed__header{
-    background-color: #a9a9a9;
-    padding: 8px;
-}
+    padding: 15px 30px 0px;
+    font-weight: 600;
+    font-size: 22px;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin: 15px 0;
+      color: darken(black, 10);
+      letter-spacing: 1px;
+      line-height: 17px;
+      font-weight: 300;
+    }
+    p {
+      color: black;
+      font-size: 18px;
+      line-height: 17px;
+      font-weight: 300;
+    }
+  }
 
 .LunchFeed__form{
     margin-bottom: 15px;
